--- a/README.rdoc
+++ b/README.rdoc
@@ -1,40 +1,29 @@
-== jnlp
+= Jnlp::Jnlp
 
 A gem for encapsulating the content and resources referenced by Java Web Start jnlps
 and interacting with jnlp repositories managed by the maven-jnlp Eclipse plugin.
 
 Complete rdoc available here: http://rubywebstart.rubyforge.org/jnlp/Jnlp/Jnlp.html
 
-For more information about the structure of Java Web Start see:
-
-http://java.sun.com/javase/6/docs/technotes/guides/javaws/developersguide/contents.html
+For more information about the structure of Java Web Start see Sun's documentation[http://java.sun.com/javase/6/docs/technotes/guides/javaws/developersguide/contents.html]
 
 To create a new Jnlp call Jnlp#new with a string that contains either a local path or a url.
 
-Examples:
+== Examples:
 
-Creating a new Jnlp object from a local Java Web Start jnlp file. 
+=== Creating a new Jnlp object from a local Java Web Start jnlp file. 
 
-j = Jnlp::Jnlp.new("authoring.jnlp")
+  j = Jnlp::Jnlp.new("authoring.jnlp")
 
-Creating a new Jnlp object from a Java Web Start jnlp referenced with a url. 
+=== Creating a new Jnlp object from a Java Web Start jnlp referenced with a url. 
 
-j = Jnlp::Jnlp.new("jnlp.concord.org/dev/org/concord/maven-jnlp/otrunk-sensor/otrunk-sensor.jnlp")
+  j = Jnlp::Jnlp.new("jnlp.concord.org/dev/org/concord/maven-jnlp/otrunk-sensor/otrunk-sensor.jnlp")
 
-Once the Jnlp object is created you can call Jnlp#cache_resources to create a local cache of all the jar and nativelib resources. 
+Once the Jnlp object is created you can call _Jnlp#cache_resources_ to create a local cache of all the jar and nativelib resources. 
 
-The structure of the cache directory and the naming using for the jar and nativelib files is the same as that used by the Java Web Start Download Servlet, see:
-
-http://java.sun.com/javase/6/docs/technotes/guides/javaws/developersguide/downloadservletguide.html
+The structure of the cache directory and the naming using for the jar and nativelib files is the same as that used by the Java Web Start Download Servlet, see Sun's servelet guide[http://java.sun.com/javase/6/docs/technotes/guides/javaws/developersguide/downloadservletguide.html].
 
 == Building the gem
-
-=== First patch Hoe
-
-Hoe versions 1.11.0 and 1.11.1 do not work with JRuby.
-
-To build the gem you will need to apply this patch to Hoe:
-0001-install_gem-nows-works-with-jruby-also.patch[http://gist.github.com/raw/87670/7bd12ecff3e27dd0a1a1d750b61d4efece372374/0001-install_gem-nows-works-with-jruby-also.patch]
 
 === The source code
 
@@ -42,9 +31,19 @@ The source code for the jnlp gem is on github[http://github.com/stepheneb/jnlp/t
 
   git clone git://github.com/stepheneb/jnlp.git
 
+=== Patch Hoe
+
+Hoe versions 1.11.0 and 1.11.1 do not work with JRuby.
+
+To build the gem you will need to apply this patch to Hoe:
+0001-install_gem-nows-works-with-jruby-also.patch[http://gist.github.com/raw/87670/7bd12ecff3e27dd0a1a1d750b61d4efece372374/0001-install_gem-nows-works-with-jruby-also.patch]
+
 === Running the tests
 
-In JRuby: jruby -S rake spec
-In MRI:   rake spec
-In Hudson: rake hudson:spec
+* JRuby: 
+  jruby -S rake spec
+* MRI
+  rake spec
+* Generating JUnit XML for integratin with the Hudson CIS server
+  rake hudson:spec
 
