limit families and versions when creating MavenJnlp
Added ability to limit the number of families parsed when 
creating a Jnlp::MavenJnlp.

Added ability to limit the number of versions parsed when 
creating a Jnlp::MavenJnlpFamily.

--- a/History.txt
+++ b/History.txt
@@ -1,3 +1,11 @@
+== 0.0.6.0 2010-05-17
+
+Added ability to limit the number of families parsed when creating a Jnlp::MavenJnlp.
+
+Added ability to limit the number of versions parsed when creating a Jnlp::MavenJnlpFamily.
+
+Updates to the README
+
 == 0.0.5.5 2010-04-19
 
 Removed use of the development dependency on hoe. Much simpler to 
