--- a/History.txt
+++ b/History.txt
@@ -1,3 +1,9 @@
+== 0.7.0 2011-06-02
+
+Replace hpricot with nokogiri
+
+Update rspec from 1.3.x to 2.5.x
+
 == 0.6.2 2010-05-24
 
 Much better support for replicating a maven_jnlp-style directory structure
