--- a/History.txt
+++ b/History.txt
@@ -1,5 +1,9 @@
 == 0.7.0 2011-06-02
 
+update date in gemspec
+
+== 0.7.0 2011-06-02
+
 Replace hpricot with nokogiri
 
 Update rspec from 1.3.x to 2.5.x
