--- a/History.txt
+++ b/History.txt
@@ -1,4 +1,9 @@
-== 0.7.0 2011-06-02
+== 0.7.2 2011-06-03
+
+Work-around strange Nokopgiri bug on Linux when creating a new doc from a TempFile
+See: https://github.com/tenderlove/nokogiri/issues/470
+
+== 0.7.1 2011-06-02
 
 update date in gemspec
 
