--- a/History.txt
+++ b/History.txt
@@ -1,3 +1,7 @@
+== 0.7.4 2012-10-14
+
+Refactor classes into their own files. Thanks scytacki!
+
 == 0.7.3 2011-08-28
 
 Extend support for Nokogiri to include 1.5.x series
